ecmascript/parser/tests/test262-error-references/fail/2d86a01ca9731879.module.js.stderr
error: Unexpected token `a`. Expected a string literal
 --> $DIR/tests/test262-parser/fail/2d86a01ca9731879.module.js:1:19
  |
1 | export {a,b} from a
  |                   ^

